Completed HTML and CSS editing

--- a/photogrid.html
+++ b/photogrid.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<title>Photo Blog</title>
-	<style type="text/css" src="photos.css"></style>
+	<link rel="stylesheet" type="text/css" href="photos.css">
+	<link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+	<p>biborndisini</p>
 
 	<!-- Massimo Margagnoni -->
 	<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg">
